# backburner

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: releasing.md
src/: cli.rs  db.rs  main.rs  models.rs  output.rs  prompts.rs  repository.rs  root.rs  settings.rs
tests/: cli.rs
