[package]
name = "backburner"
version = "0.1.1"
edition = "2024"
description = "Private project memory for work worth coming back to."
license = "MIT"
repository = "https://github.com/rollingstorms/backburner"
homepage = "https://github.com/rollingstorms/backburner"
documentation = "https://docs.rs/backburner"
readme = "README.md"
keywords = ["cli", "tasks", "productivity", "git"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "src/**",
    "tests/**",
]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "bb"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
